--- a/task/package.json
+++ b/task/package.json
@@ -1,19 +1,25 @@
 {
-    "name": "clockwise-wdio-task",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-      "start": "npx static-server public -p 8080",
-      "test": "wdio run wdio.conf.js",
-      "test:headed": "HEADLESS=false npm test"
-    },
-    "devDependencies": {
-        "@wdio/cli": "^8.30.1",
-        "@wdio/local-runner": "^8.30.1",
-        "@wdio/mocha-framework": "^8.30.1",
-        "@wdio/devtools-service": "^8.30.1",
-        "@wdio/spec-reporter": "^8.30.1",
-        "expect-webdriverio": "^3.0.0",
-        "static-server": "^2.2.1"
-    }
+  "name": "clockwise-test-task",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "npx static-server public -p 8080",
+    "wdio:test": "wdio run wdio.conf.js",
+    "wdio:test:headed": "HEADLESS=false npm test",
+
+    "pw:test": "playwright test",
+    "pw:ui":   "playwright test --ui"
+  },
+  "devDependencies": {
+      "@wdio/cli": "^8.30.1",
+      "@wdio/local-runner": "^8.30.1",
+      "@wdio/mocha-framework": "^8.30.1",
+      "@wdio/devtools-service": "^8.30.1",
+      "@wdio/spec-reporter": "^8.30.1",
+      "expect-webdriverio": "^3.0.0",
+      "static-server": "^2.2.1",
+
+      "@playwright/test":      "^1.51.0",
+      "playwright":            "^1.51.0"
   }
+}
